--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ashleigh090990/dashboard#readme",
   "dependencies": {
+    "bower": "^1.5.2",
     "express": "^4.13.3"
   }
 }
